--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Tags -->
+    <title>Login | Smokify</title>
+    <meta name="title" content="Login | Smokify" />
+    <meta
+      name="description"
+      content="Smokify redefines music streaming, granting instant access to millions of songs sans downloads"
+    />
+  </head>
+
+  <body>
     <h1>Hello world</h1>
-</body>
+  </body>
 </html>
