Added Pictures to Images folder

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -11,6 +11,9 @@
       name="description"
       content="Smokify redefines music streaming, granting instant access to millions of songs sans downloads"
     />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="" />
   </head>
 
   <body>
