--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -13,7 +13,7 @@
     />
 
     <!-- Favicon -->
-    <!-- <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml" /> -->
+    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml" />
 
     <!-- Google Fontlink -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
