remove typos in app.js

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -24,14 +24,14 @@
     />
 
     <!-- Custom Css-->
-    <link rel="stylesheet" href="/public/css/login.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
 
   <body>
     <article class="login-page">
       <div class="banner">
         <img
-          src="/public/images/login-banner.jpg"
+          src="images/login-banner.jpg"
           width="1080"
           height="1080"
           alt=""
@@ -42,7 +42,7 @@
       <div class="content">
         <a href="/" class="logo">
           <img
-            src="/public/images/logo.svg"
+            src="images/logo.svg"
             width="94"
             height="24"
             alt="Smokify logo"
@@ -55,7 +55,7 @@
             <strong>journey!</strong>
           </h2>
           <a href="/auth" class="btn btn-primary has icon" data-ripple>
-            <img src="/public/images/spotify-on-primaary.svg" alt="" />
+            <img src="images/spotify-on-primary.svg" alt="" />
           </a>
         </div>
       </div>
