Added necessary content to login page

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -13,7 +13,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" /> -->
 
     <!-- Google Font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -51,13 +51,31 @@
 
         <div class="wrapper">
           <h2 class="title headline-medium">
-            <strong>Join us</strong> and embark on an incredible musical
-            <strong>journey!</strong>
+            <strong>Join us</strong> for an amazing musical
+            <strong>adventure!</strong>
           </h2>
-          <a href="/auth" class="btn btn-primary has icon" data-ripple>
-            <img src="images/spotify-on-primary.svg" alt="" />
+          <a href="/auth" class="btn btn-primary has icon">
+            <img
+              src="images/spotify-on-primary.svg"
+              width="18"
+              height="18"
+              alt=""
+            />
+
+            <span class="label-large">Continue with Spotify</span>
+
+            <div class="state-layer"></div>
           </a>
         </div>
+        <p class="bottom-text label-large">
+          Powered by
+          <a
+            href="https://spotify.com"
+            target="_blank"
+            class="link link-primary"
+            >Spotify</a
+          >
+        </p>
       </div>
     </article>
   </body>
