Updated login page, content, button

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,6 +22,65 @@
     object-fit: cover;
 }
 
+:has(> .state-layer){
+    position: relative;
+    overflow: hidden;
+    isolation: isolate;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.state-layer{
+    position: absolute;
+    inset: 0;
+    background-color: var(--state-layer-bg);
+    opacity: 0;
+    transition: opacity var(--tr-duration-short-2) var(--tr-easing-linear);
+}
+
+
+:has(> .state-layer):hover > .state-layer{
+    opacity: 0.08;
+}
+
+:has(> .state-layer):is(:focus,:focus-visible, :focus-within,:active) > .state-layer
+{
+    opacity: 0.12;
+}
+
+.link{
+    display: inline-block;
+}
+
+.link:where(:hover, :focus-visible){
+    text-decoration: underline;
+}
+
+.link-primary{
+    color: var(--primary);
+}
+
+/* Component */
+
+.btn{
+    max-width: max-content;
+    min-width: max-content;
+    height: 40px;
+    padding-inline: var(--space-4) var(--space-6);
+    display: flex;
+    align-items: center;
+    gap: var(--space-2);
+    border-radius: var(--radius-full);
+    background-color: var(--primary);
+    color: var(--on-primary);
+    --state-layer-bg: var(--on-primary);
+    transition: box-shadow var(--tr-duration-short-2) var(--tr-easing-linear);
+}
+
+.btn:hover:not(:focus){
+    box-shadow: var(--shadow-1);
+}   
+
 /* Main */
 
 .login-page{
@@ -50,4 +109,11 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
 }
+
+.btn{
+    margin-inline: auto;
+    margin-block-start: var(--space-4);
+}
+
